@@ -6481,13 +6481,27 @@ class MainFrame(wx.Frame):
     def do_command(self, cmd):
         self.editor.CmdKeyExecute(cmd)
 
-    def OnUndo(self, evt):      self.do_command(stc.STC_CMD_UNDO)
-    def OnRedo(self, evt):      self.do_command(stc.STC_CMD_REDO)
-    def OnCut(self, evt):       self.do_command(stc.STC_CMD_CUT)
-    def OnCopy(self, evt):      self.do_command(stc.STC_CMD_COPY)
-    def OnPaste(self, evt):     self.do_command(stc.STC_CMD_PASTE)
-    def OnDelete(self, evt):    self.do_command(stc.STC_CMD_CLEAR)
-    def OnSelectAll(self, evt): self.do_command(stc.STC_CMD_SELECTALL)
+    def OnUndo(self, evt):      #self.do_command(stc.STC_CMD_UNDO)
+        widget = self.FindFocus()
+        widget.Undo()
+    def OnRedo(self, evt):      #self.do_command(stc.STC_CMD_REDO)
+        widget = self.FindFocus()
+        widget.Redo()
+    def OnCut(self, evt):       #self.do_command(stc.STC_CMD_CUT)
+        widget = self.FindFocus()
+        widget.Cut()
+    def OnCopy(self, evt):      #self.do_command(stc.STC_CMD_COPY)
+        widget = self.FindFocus()
+        widget.Copy()
+    def OnPaste(self, evt):    #self.do_command(stc.STC_CMD_PASTE)
+        widget = self.FindFocus()
+        widget.Paste()
+    def OnDelete(self, evt):    #self.do_command(stc.STC_CMD_CLEAR)
+        widget = self.FindFocus()
+        widget.Clear()
+    def OnSelectAll(self, evt): #self.do_command(stc.STC_CMD_SELECTALL)
+        widget = self.FindFocus()
+        widget.SelectAll()
 
     def OnFind(self, evt):
         self.close_existing_find_and_replace_dialogs()
